Name:                proglang-util
Version:             0.1.0.1
Synopsis:            Useful tools for programming language development
Description:
  Utility code for work relating to programming languages.  This
  package contains a number of miscellaneous tools which are common in
  frontends, type checkers, compilers, and interpreters.
License:             BSD3
Author:              Eric McCorkle
Maintainer:          eric@shadowsun.net
Stability:           Pre-alpha
Category:            Development
Build-type:          Simple
Cabal-version:       >= 1.9.2

Test-Suite unit-test
  type:                 exitcode-stdio-1.0
  main-is:              UnitTestMain.hs
  build-depends:        base, mtl, data-hash, pretty, fgl, array, bitarray,
                        Cabal >= 1.9.2, HUnit

Library
  build-depends:        base, mtl, data-hash, pretty, fgl, array, bitarray,
                        numeric-prelude, containers
  exposed-modules:      Control.Monad.Gensym, Control.Monad.Gensym.Class,
                        Control.Monad.Symtab, Control.Monad.Symtab.Class,
                        Control.Monad.Lexer, Control.Monad.Lexer.Class,
                        Control.Monad.Messages.Class, Control.Monad.Messages,
                        Control.Monad.Messages.Basic,
                        Control.Monad.Symtab.Flat, Data.Symbol, Data.Pos,
                        Data.Message.Class, Data.Polynomial.Multivariate,
                        Data.Graph.Inductive.Query.DomFrontier, Text.AlexHelper,
                        Text.Format
