Name:                proglang-util
Version:             0.2.0.0
Synopsis:            Useful tools for programming language development
Description:
  Utility code for work relating to programming languages.  This
  package contains a number of miscellaneous tools which are common in
  frontends, type checkers, compilers, and interpreters.
License:             BSD3
Author:              Eric McCorkle
Maintainer:          eric@shadowsun.net
Stability:           Pre-alpha
Category:            Development
Build-type:          Simple
Cabal-version:       >= 1.9.2

Test-Suite unit-test
  type:                 detailed-0.9
  test-module:          UnitTest
  build-depends:        base, mtl, data-hash, pretty, fgl, array, bitarray,
                        Cabal >= 1.9.2, HUnit

Library
  build-depends:        base, mtl, data-hash, pretty, fgl, array, bitarray,
                        numeric-prelude, containers, bound, prelude-extras
  exposed-modules:      Control.Monad.Gensym, Control.Monad.Gensym.Class,
                        Control.Monad.Symtab, Control.Monad.Symtab.Class,
                        Control.Monad.Lexer, Control.Monad.Lexer.Class,
                        Control.Monad.Messages.Class, Control.Monad.Messages,
                        Control.Monad.Messages.Basic,
                        Control.Monad.Symtab.Flat, Data.Default, Data.Symbol,
                        Data.Hash.ExtraInstances, Data.Pos, Data.Message.Class,
                        Data.Graph.Inductive.Query.DomFrontier,
                        Prelude.Extras.ExtraInstances,
                        Text.AlexHelper, Text.Format
